--- a/grpc-grades-service/pom.xml
+++ b/grpc-grades-service/pom.xml
@@ -18,9 +18,13 @@
             <artifactId>wagon-provider-api</artifactId>
             <version>2.8</version>
         </dependency>
-            <dependency>
+        <dependency>
                 <groupId>com.sunnywu.grpc-nsq</groupId>
                 <artifactId>grpc-grades-proto</artifactId>
-            </dependency>
+        </dependency>
+        <dependency>
+            <groupId>com.sunnywu.grpc-nsq</groupId>
+            <artifactId>grpc-students-clients</artifactId>
+        </dependency>
     </dependencies>
 </project>
